# Dronebot_Px4

./: .gitmodules
MissionComputer/src/: CMakeLists.txt  main.cpp
boards/thepeach/k1/: default.cmake
boards/thepeach/r1/: default.cmake
boards/thepeach/r1/nuttx-config/nsh/: defconfig
msg/: manual_control_setpoint.msg  rc_channels.msg
src/modules/rc_update/: params.c  rc_update.cpp  rc_update.h
